# agoralab

./: .gitignore  404.html  AGENTS.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: deploy.yml
assets/stylesheets/: extra.css
blog/: index.html
blog/2026/07/01/bem-vindo-ao-agoralab/: index.html
blog/2026/07/07/usando-opencode-no-celular-com-termux/: index.html
blog/2026/07/09/match-case-pydantic-com-telegram/: index.html
blog/archive/2026/: index.html
blog/author/luciodias/: index.html
blog/category/pessoal/: index.html
blog/category/python/: index.html
blog/category/tecnologia/: index.html
blog/category/termux/: index.html
blog/tags/: index.html
docs/: index.md  tags.md
docs/blog/: .authors.yml  tags.md
docs/blog/author/: luciodias.md
docs/blog/posts/: match-case-pydantic-telegram.md  primeiro-post.md  usando-opencode-no-celular-com-termux.md
ext/: slugs.py
hooks/: socialmedia.py
search/: search_index.json
tags/: index.html
