[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "luciodias",email = "email@email.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-material (>=9.7.6,<10.0.0)"
]


[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)"
]
